@@ -5,6 +5,7 @@ Update setuptools requirement to 75.3.0
 
 # New Features
 Added the `character` search option to the `imdb_search` builder
+Added ability to use Show-level ratings at the season and episode level for Overlays if the original source does not provide ratings at the season or episode level. This is accomplished using (Special Text Variables)[https://kometa.wiki/en/latest/files/overlays/#special-text-variables] but is not yet available for the `Ratings` Defaults file.
 Add `show_unfiltered` setting to display items which make it through a filter
 
 # Defaults
